[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
elor = "1.1.3"
bimap = "0.6.2"
libc = "0.2.138"
serde_json = "1.0.89"
serde = { version = "1.0.151", features = ["derive"] }
byteorder = "1.4.3"
get-size = { version = "^0.1", features = ["derive"] }
rayon = "1.6.1"
bytemuck = { version = "1.12.3", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3
